--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -33,6 +33,7 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.1",
     "cva": "npm:class-variance-authority@^0.7.1"
   }
 }
